-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 071100) **
-----------------------------------------------------------------------

About the version numbers... "vx.y.zRt" :

  x = major version  - the overall development status
  y = devel-series   - represents a set of planned features
  z = minor version  - version number of the current development series
  Rt = 'rx'          - stable release number x
  Rt = 'dx'  	     - development version

-----------------------------------------------------------------------

Last officially released version is -*> v1.8.2r14 <*-

??112000 (v1.8.5d15)
07112000 (v1.8.4d15)
	- added: pulse gate (-eemp); can be used to generate a
	         metronome signal [rcs]
	- added: support for preset parameters - see file 
                 'effect_presets' for examples [artham]
	- added: support for MIDI files using Timidity++
	- added: input and output of Ogg Vorbis files (.ogg) using 
		 ogg123 and vorbize
	- added: version control to internal plugins; when compiling,
		 libecasound libtool interface number is stored to 
		 the plugin object files
	- added: updates and additions to ecasound programmer's guide
	- added: support for noninterleaved streams to ALSA 0.6.x plugin
	- added: 4th parameter to -f, 'i' (default) indicates interleaved 
		 stream format while 'n' refers to noninterleaved
	- added: -D option; prints debug messages to stderr
	- removed: -m:mthreaded and -z:db (obsolete)
	- changed: tries to load all internal plugins even if some 
		   plugins were disabled during compile-time; this 
		   makes it possible to have multiple versions of same
                   plugin tupe (for instance, plugins for different 
		   ALSA versions, etc)
	- changed: ecasoundrc - mikmod-path and -args combined into
		   more general mikmod-cmd
	- fixed: compile time problems under Solaris 2.6 and FreeBSD
	         4.1  [beaupran, rcampbel]