@@ -26,7 +26,7 @@ page]</A></H4></CENTER>
 
 manpage(ecasound)
        (1)
-       (21.10.2000)
+       (09.11.2000)
        ()
        (Multimedia software)
 
@@ -364,6 +364,20 @@ dit(-ezx:left-dc-fix-value,right-dc-fix-value)
 Adjusts the signal DC by 'dc-fix-value'. Use -ezf to find the
 optimal value.
  
+enddit()
+
+em(ENVELOPE MODULATION)
+startdit()
+
+dit(-eemb:bpm,on-time-msec)
+Pulse gate (pulse frequency given as beats-per-minute).
+
+dit(-eemp:freq-Hz,on-time-%)
+Pulse gate.
+
+dit(-eemt:bpm,depth-%)
+Tremolo effect (tremolo speed given as beats-per-minute).
+
 enddit()
 
 em(FILTER EFFECTS)
