@@ -8,7 +8,7 @@ dnl Init automake
 dnl ---
 dnl !!!
 dnl remember to update eca-version.h
-AM_INIT_AUTOMAKE(ecasound, 1.8.4d15)
+AM_INIT_AUTOMAKE(ecasound, 1.8.5d15)
 AM_CONFIG_HEADER(config.h)
 
 dnl ---
