@@ -35,6 +35,9 @@ const char* ecasound_parameter_help_rep =
 "     -eaw:params              amplify with clip-control\n"
 "     -ec:params               compressor\n"
 "     -eca:params              advanced compressor\n"
+"     -eemb:params             pulse gate (bpm)\n"
+"     -eemp:params             pulse gate\n"
+"     -eemt:params             tremolo\n"
 "     -ef1:params              resonant bandpass filter\n"
 "     -ef3:params              resonant lowpass filter\n"
 "     -ef4:params              resonant lowpass filter (2nd-order,24dB)\n"
