@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------
-** Ecasound - User-visible changes (NEWS)      (last edited: 071100) **
+** Ecasound - User-visible changes (NEWS)      (last edited: 091100) **
 -----------------------------------------------------------------------
 
 About the version numbers... "vx.y.zRt" :
@@ -15,6 +15,7 @@ About the version numbers... "vx.y.zRt" :
 Last officially released version is -*> v1.8.2r14 <*-
 
 ??112000 (v1.8.5d15)
+	- added: tremolo effect (-eemt) [rcs]
 07112000 (v1.8.4d15)
 	- added: pulse gate (-eemp); can be used to generate a
 	         metronome signal [rcs]
